crates/qwik-optimizer-oxc/tests/snapshots/should_not_move_over_side_effects.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
export const $promoteToRoot$ = (ref: SeenRef) => {
  const path = $getObjectPath$(ref) as string;
  // should stay before the push
  const idx = roots.length;
  roots.push(new BackRef(path));
  ref.$parent$ = null;
  ref.$index$ = idx;
  return idx;
};

=== test.js ===
export const $promoteToRoot$ = (ref: SeenRef) => {
	const path = $getObjectPath$(ref) as string;
	// should stay before the push
	const idx = roots.length;
	roots.push(new BackRef(path));
	ref.$parent$ = null;
	ref.$index$ = idx;
	return idx;
};
