crates/qwik-optimizer-oxc/tests/snapshots/should_not_transform_events_on_non_elements.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_l5Al0251s9w = () => import("./test.tsx_Greeter_component_l5Al0251s9w");
const i_dWH0ComNdBo = () => import("./test.tsx_Greeter_component___q_e_click_dWH0ComNdBo");
const i_dWH0ComNdBo = () => import("./test.tsx_Greeter_component___q_e_click_dWH0ComNdBo");
import { CustomComponent } from "./custom-component";
import { AnotherComponent } from "./another-component";
export const Greeter = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_l5Al0251s9w, "Greeter_component_l5Al0251s9w"));

=== test.tsx_Greeter_component_l5Al0251s9w.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_dWH0ComNdBo = () => import("./test.tsx_Greeter_component___q_e_click_dWH0ComNdBo");
const i_dWH0ComNdBo = () => import("./test.tsx_Greeter_component___q_e_click_dWH0ComNdBo");
import { CustomComponent } from "./custom-component";
import { AnotherComponent } from "./another-component";
export const Greeter_component_l5Al0251s9w = () => {
	return <div>
			<CustomComponent onClick$={() => {}} />
			{array.map((item) => <AnotherComponent onClick$={() => {}} />)}
		</div>;
}

=== test.tsx_Greeter_component___q_e_click_dWH0ComNdBo.tsx === (ENTRY)
export const Greeter_component___q_e_click_dWH0ComNdBo = () => {};

=== test.tsx_Greeter_component___q_e_click_dWH0ComNdBo.tsx === (ENTRY)
export const Greeter_component___q_e_click_dWH0ComNdBo = () => {};
