crates/qwik-optimizer-oxc/tests/snapshots/should_not_wrap_fn.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_qsBJpzBk9qc = () => import("./test.tsx_Cmp_component_qsBJpzBk9qc");
const i_hiQTyBUK0Yk = () => import("./test.tsx_Cmp_component_button_q_e_click_hiQTyBUK0Yk");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
import { A } from "./componentA";
export const Cmp = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_qsBJpzBk9qc, "Cmp_component_qsBJpzBk9qc"));

=== test.tsx_Cmp_component_qsBJpzBk9qc.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_hiQTyBUK0Yk = () => import("./test.tsx_Cmp_component_button_q_e_click_hiQTyBUK0Yk");
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
import { A } from "./componentA";
export const Cmp_component_qsBJpzBk9qc = () => {
	const currentStep = useSignal("STEP_1");
	const currentType = useSignal<"NEXT" | "PREVIOUS">("PREVIOUS");
	const getStep = (step: string, type: "NEXT" | "PREVIOUS") => {
		return step === "STEP_1" ? "STEP_2" : "STEP_1";
	};
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [/* @__PURE__ */ _jsxSorted("button", null, { "q-e:click": /* @__PURE__ */ qrl(i_hiQTyBUK0Yk, "Cmp_component_button_q_e_click_hiQTyBUK0Yk", [currentType]) }, "CLICK", 3, "u6_0"), /* @__PURE__ */ _jsxSorted(A, { href: getStep(currentStep.value, currentType.value) }, null, null, 3, "u6_1")], 1, "u6_2");
}

=== test.tsx_Cmp_component_button_q_e_click_hiQTyBUK0Yk.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Cmp_component_button_q_e_click_hiQTyBUK0Yk = () => {
	const currentType = _captures[0];
	return currentType.value = "NEXT";
};
