crates/qwik-optimizer-oxc/tests/snapshots/should_not_wrap_var_template_string.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test_default_component_jN9ZUuuADmk");
const i_hufCehIw5mI = () => import("./test_productTitle_useComputed_hufCehIw5mI");
import { component$, useComputed$ } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.jsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_hufCehIw5mI = () => import("./test.tsx_productTitle_useComputed_hufCehIw5mI");
import { _jsxSorted } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = () => {
	const t = inlineTranslate();
	const productTitle = /* @__PURE__ */ useComputedQrl(/* @__PURE__ */ qrl(i_hufCehIw5mI, "productTitle_useComputed_hufCehIw5mI"));
	return /* @__PURE__ */ _jsxSorted("img", {
		attr: t("home.imageAlt.founded-product:"),
		alt: `${t("home.imageAlt.founded-product:")} ${productTitle.value}`
	}, null, null, 3, "u6_0");
};

=== test.tsx_productTitle_useComputed_hufCehIw5mI.jsx === (ENTRY)
export const productTitle_useComputed_hufCehIw5mI = () => {
	return "Test title";
};
